Resources (APP and BASE) base configuration

--- a/Outfitty/WebApp/Views/Shared/_Layout.cshtml
+++ b/Outfitty/WebApp/Views/Shared/_Layout.cshtml
@@ -24,11 +24,12 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Planner</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Favourites</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Favourites</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">MyWardrobe</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">@BASE.Resources.Common.Privacy</a>
                     </li>
+                    <partial name="_LanguageSelection"/>
                 </ul>
                 <partial name="_LoginPartial"/>
             </div>
@@ -44,6 +45,7 @@
 <footer class="border-top footer text-muted">
     <div class="container">
         &copy; 2025 - Outfitty - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        @Thread.CurrentThread.CurrentCulture.Name | @Thread.CurrentThread.CurrentUICulture.Name
         - <a asp-area="" asp-controller="Home" asp-action="Privacy">About</a>
         - <a asp-area="" asp-controller="Home" asp-action="Privacy">Contact</a>
     </div>
