Domain changes, added photo to Outfit, ImageMetadata fixes, WebApp links and new controllers added

--- a/Outfitty/WebApp/Views/Home/Index.cshtml
+++ b/Outfitty/WebApp/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to your virtual wardrobe!</h1>
+    <p>Step into your virtual closet, where style meets simplicity.<a href="https://learn.microsoft.com/aspnet/core">Learn more</a> or start creating! <br/>
+        Join the outfitty mafia 😎</p>
+    @* Here I want the button (create new outfit) *@
+    
+    <h2>Your previous outfits</h2>
+    @* Here is gonna be the slider of previous outfits. The person can slide his outfits left and right. Its like a carousel. *@
 </div>
