--- a/Outfitty/WebApp/Views/Shared/_Layout.cshtml
+++ b/Outfitty/WebApp/Views/Shared/_Layout.cshtml
@@ -21,14 +21,15 @@
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Planner</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MyWardrobe">MyWardrobe</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MyPlanner">Planner</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Favourites</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">@BASE.Resources.Common.Privacy</a>
-                    </li>
+                    
                     <partial name="_LanguageSelection"/>
                 </ul>
                 <partial name="_LoginPartial"/>
@@ -44,7 +45,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2025 - Outfitty - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2025 - Outfitty - <a asp-area="" asp-controller="Home" asp-action="Privacy">@BASE.Resources.Common.Privacy</a>
         @Thread.CurrentThread.CurrentCulture.Name | @Thread.CurrentThread.CurrentUICulture.Name
         - <a asp-area="" asp-controller="Home" asp-action="Privacy">About</a>
         - <a asp-area="" asp-controller="Home" asp-action="Privacy">Contact</a>
